--- a/Biodata.html
+++ b/Biodata.html
@@ -24,7 +24,7 @@ background-color: #c28989;
 <tr>
 <td>Name</td>
 <td>Azzura Hudzaifa Harun</td>
-<td rowspan="10" align="center"><img src="me.jpg" width="300" height="400"></td>
+<td rowspan="10" align="center"><img src="aku.jpeg" width="300" height="400"></td>
 </tr>
 <tr>
 <td>Place, Date of Birth</td>
